syntax="proto2";

import "google/protobuf/descriptor.proto";

option go_package="github.com/ncrypthic/protoc-gen-go-errors/proto";

package errors;

enum Status {
  OK = 0;
  CANCELED = 1;
  UNKNOWN = 2;
  INVALID_ARGUMENT = 3;
  DEADLINE_EXCEEDED = 4;
  NOT_FOUND = 5;
  ALREADY_EXISTS = 6;
  PERMISSION_DENIED = 7;
  RESOURCE_EXHAUSTED = 8;
  FAILED_PRECONDITION = 9;
  ABORTED = 10;
  OUT_OF_RANGE = 11;
  UNIMPLEMENTED = 12;
  INTERNAL = 13;
  UNAVAILABLE = 14;
  DATA_LOSS = 15;
  UNAUTHENTICATED = 16;
}

message Error {
  required Status status = 1;
  required string code = 2;
}

extend google.protobuf.MethodOptions {
  repeated Error types = 50003;
}
